working github pages link

--- a/public/index.html
+++ b/public/index.html
@@ -18,30 +18,16 @@
     <script src="https://kit.fontawesome.com/163fba410a.js" crossorigin="anonymous"></script>
 
     <!-- Font CDN -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap" rel="stylesheet">
-    
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Boogaloo&display=swap" rel="stylesheet">
-
     <link href="http://fonts.cdnfonts.com/css/falling-slowly-free-demo" rel="stylesheet">
-
     <link href="http://fonts.cdnfonts.com/css/technically-but-not-actually" rel="stylesheet">
-
     <link href="http://fonts.cdnfonts.com/css/takeitorleaveit" rel="stylesheet">
-
     <link href="http://fonts.cdnfonts.com/css/mixlean" rel="stylesheet">
     
     <!-- CSS File -->
-    <link rel="stylesheet" href="%PUBLIC_URL%/../../src/App.css">
-    <link rel="stylesheet" href="%PUBLIC_URL%/../stylesheet.css">
+    <link href="%PUBLIC_URL%/stylesheet.css" type="text/css" rel="stylesheet">
 
     <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <!-- manifest.json metadata -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   
     <!-- Website Title -->
     <title>Phalon Portfolio</title>
