--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,10 @@
     <script src="https://kit.fontawesome.com/163fba410a.js" crossorigin="anonymous"></script>
 
     <!-- Font CDN -->
+    <style>
+      @import url('http://fonts.cdnfonts.com/css/mixlean');
+    </style>
+    
     <link href="http://fonts.cdnfonts.com/css/falling-slowly-free-demo" rel="stylesheet">
     <link href="http://fonts.cdnfonts.com/css/technically-but-not-actually" rel="stylesheet">
     <link href="http://fonts.cdnfonts.com/css/takeitorleaveit" rel="stylesheet">
