trying to get font working

--- a/public/index.html
+++ b/public/index.html
@@ -19,12 +19,10 @@
 
     <!-- Font CDN -->
     <style>
-      @import url('http://fonts.cdnfonts.com/css/mixlean');
+      @import url('//http://fonts.cdnfonts.com/css/mixlean');
     </style>
-    
+
     <link href="http://fonts.cdnfonts.com/css/falling-slowly-free-demo" rel="stylesheet">
-    <link href="http://fonts.cdnfonts.com/css/technically-but-not-actually" rel="stylesheet">
-    <link href="http://fonts.cdnfonts.com/css/takeitorleaveit" rel="stylesheet">
     <link href="http://fonts.cdnfonts.com/css/mixlean" rel="stylesheet">
     
     <!-- CSS File -->
