--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,28 @@
       @import url('//http://fonts.cdnfonts.com/css/mixlean');
     </style>
 
-    <link href="http://fonts.cdnfonts.com/css/falling-slowly-free-demo" rel="stylesheet">
-    <link href="http://fonts.cdnfonts.com/css/mixlean" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/falling-slowly-free-demo" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/mixlean" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Zen+Loop&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pompiere&display=swap" rel="stylesheet"> 
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Delius&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ms+Madi&display=swap" rel="stylesheet">  
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Clicker+Script&display=swap" rel="stylesheet">
     
     <!-- CSS File -->
     <link href="%PUBLIC_URL%/stylesheet.css" type="text/css" rel="stylesheet">
