trying new fonts again

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,9 @@
     <style>
       @import url('//http://fonts.cdnfonts.com/css/mixlean');
     </style>
+    <style>
+      @import url('http://fonts.cdnfonts.com/css/falling-slowly-free-demo');
+    </style>
 
     <link href="https://fonts.cdnfonts.com/css/falling-slowly-free-demo" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/mixlean" rel="stylesheet">
