--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
       content="Web site created using create-react-app"
     /> 
 
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+
     <!-- Font Awesome - Icons -->
     <script src="https://kit.fontawesome.com/163fba410a.js" crossorigin="anonymous"></script>
 
@@ -24,9 +26,21 @@
     <style>
       @import url('http://fonts.cdnfonts.com/css/falling-slowly-free-demo');
     </style>
+     <style>
+      @import url('http://fonts.cdnfonts.com/css/yanone-kaffeesatz');
+    </style>
+    <style>
+      @import url('http://fonts.cdnfonts.com/css/bayberry');
+    </style>
+    <style>
+        @import url('http://fonts.cdnfonts.com/css/cangste');
+    </style>
 
     <link href="https://fonts.cdnfonts.com/css/falling-slowly-free-demo" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/mixlean" rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/yanone-kaffeesatz" rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/bayberry" rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/cangste" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -47,6 +61,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Clicker+Script&display=swap" rel="stylesheet">
+
     
     <!-- CSS File -->
     <link href="%PUBLIC_URL%/stylesheet.css" type="text/css" rel="stylesheet">
@@ -55,7 +70,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   
     <!-- Website Title -->
-    <title>Phalon Portfolio</title>
+    <title>Janelle Phalon | Web Developer</title>
   
   </head>
 
@@ -64,6 +79,6 @@
     <div id="root"></div>
 
     <!-- Script -->
-
+    
   </body>
 </html>
