deployed working fonts

--- a/public/index.html
+++ b/public/index.html
@@ -21,26 +21,26 @@
 
     <!-- Font CDN -->
     <style>
-      @import url('//http://fonts.cdnfonts.com/css/mixlean');
+      @import url('https://fonts.cdnfonts.com/css/mixlean');
     </style>
     <style>
-      @import url('http://fonts.cdnfonts.com/css/falling-slowly-free-demo');
+      @import url('https://fonts.cdnfonts.com/css/falling-slowly-free-demo');
     </style>
      <style>
-      @import url('http://fonts.cdnfonts.com/css/yanone-kaffeesatz');
+      @import url('https://fonts.cdnfonts.com/css/yanone-kaffeesatz');
     </style>
     <style>
-      @import url('http://fonts.cdnfonts.com/css/bayberry');
+      @import url('https://fonts.cdnfonts.com/css/bayberry');
     </style>
     <style>
-        @import url('http://fonts.cdnfonts.com/css/cangste');
+        @import url('https://fonts.cdnfonts.com/css/cangste');
     </style>
 
-    <link href="https://fonts.cdnfonts.com/css/falling-slowly-free-demo" rel="stylesheet">
-    <link href="https://fonts.cdnfonts.com/css/mixlean" rel="stylesheet">
-    <link href="http://fonts.cdnfonts.com/css/yanone-kaffeesatz" rel="stylesheet">
-    <link href="http://fonts.cdnfonts.com/css/bayberry" rel="stylesheet">
-    <link href="http://fonts.cdnfonts.com/css/cangste" rel="stylesheet">
+    <!-- <link href="https://fonts.cdnfonts.com/css/falling-slowly-free-demo" rel="stylesheet"> -->
+    <link href="https://fonts.cdnfonts.com/css/mixlean" rel="stylesheet" type="text/css">
+    <link href="https://fonts.cdnfonts.com/css/yanone-kaffeesatz" rel="stylesheet" type="text/css">
+    <link href="https://fonts.cdnfonts.com/css/bayberry" rel="stylesheet" type="text/css">
+    <link href="https://fonts.cdnfonts.com/css/cangste" rel="stylesheet" type="text/css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
